@@ -52,6 +52,9 @@ private slots:
 	void on_actionPodkategorije_triggered();
 	void on_actionEnote_triggered();
 	void on_actionIzhod_triggered();
+	void on_actionNova_baza_triggered();
+	void on_actionOdpri_bazo_triggered();
+	void on_actionZapri_bazo_triggered();
 	void keyPressEvent(QKeyEvent *event);
 
 	void on_btn_home_clicked();
