@@ -5,6 +5,9 @@
 ----------
 - izboljšava: logotip se shrani v bazo podatkov
 - izboljšava: tisk logotip kliče iz baze
+- izboljšava: baza podatkov se kliče le ob zagonu programa in je odprta dokler je odprt program
+- izboljšava: baza ni več kodirana v programu ampak jo lahko uporabnik izbere ob prvem zagonu programa
+- izboljšava: uporabnik lahko med delom zapre ali zamenja bazo podatkov
 
 0.9.35
 ----------
